# NSGA2

./: CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Individual.cpp  Individual.h  NSGA2.cpp  Population.cpp  Population.h  README.md  pch.h  plot.py
problems/: Problem.h  ZDT1.cpp  ZDT1.h
